Simplify packages and use JetBrains Mono Nerd Font
- Change rofi-lbonn-wayland to standard rofi package
- Replace all fonts with single ttf-jetbrains-mono-nerd
- Update all config files to use JetBrainsMono Nerd Font
- Nerd Font includes icons, removing need for Font Awesome

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,7 +1,7 @@
 /* Waybar Style - Catppuccin Mocha Theme */
 
 * {
-    font-family: "JetBrains Mono", "Font Awesome 6 Free";
+    font-family: "JetBrainsMono Nerd Font";
     font-size: 13px;
     min-height: 0;
 }
