--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -129,8 +129,8 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
-    col.active_border = {{WM_BORDER_ACTIVE_COLOR:hypr_rgba:WM_BORDER_ACTIVE_OPACITY}}
-    col.inactive_border = {{WM_BORDER_INACTIVE_COLOR:hypr_rgba:WM_BORDER_INACTIVE_OPACITY}}
+    col.active_border = rgba(3ddbd9ed)
+    col.inactive_border = rgba(3a3a3aaa)
     resize_on_border = false
     allow_tearing = false
     layout = dwindle
@@ -156,7 +156,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = {{WM_SHADOW_COLOR:hypr_rgba:WM_SHADOW_OPACITY}}
+        color = rgba(1a1a1aed)
     }
 }
 
