--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -38,7 +38,7 @@ env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 # ------------------------------------------------------------------------------
 # Monitor Configuration
 # ------------------------------------------------------------------------------
-monitor = ,preferred,auto,auto
+monitor = ,preferred,auto,1
 
 # ------------------------------------------------------------------------------
 # Autostart
@@ -48,6 +48,7 @@ exec-once = nm-applet --indicator
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = elephant
+exec-once = awww-daemon
 exec-once = walker --gapplication-service
 
 # ------------------------------------------------------------------------------
@@ -117,7 +118,7 @@ bind = SHIFT, Print, exec, grim - | wl-copy
 # Laptop function keys
 bindel = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
@@ -129,8 +130,8 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
-    col.active_border = rgba(3ddbd9ed)
-    col.inactive_border = rgba(3a3a3aaa)
+    col.active_border = rgba(404952ed)
+    col.inactive_border = rgba(354149aa)
     resize_on_border = false
     allow_tearing = false
     layout = dwindle
@@ -156,7 +157,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aed)
+        color = rgba(0a0c0eed)
     }
 }
 
@@ -215,9 +216,7 @@ input {
     }
 }
 
-gestures {
-    workspace_swipe = true
-}
+gesture = 3, horizontal, workspace
 
 # ------------------------------------------------------------------------------
 # Cursor
