Fix walker menus to show entries on empty query
- Use provider sets (-s) instead of direct provider (-m) to enable empty query config
- Add provider sets for all menu types (main, apps, packages, files, windows, keybinds, clipboard, calc)
- Each set configures both default and empty to show entries immediately
- Update main menu actions to use walker -s instead of -m

--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -57,7 +57,7 @@ exec-once = walker --gapplication-service
 # ------------------------------------------------------------------------------
 
 # Applications
-bind = $mod, Space, exec, walker -m menus:main -H
+bind = $mod, Space, exec, walker -s main -H
 bind = $mod, Return, exec, $terminal
 bind = $mod SHIFT, B, exec, xdg-open https://
 bind = $mod SHIFT, F, exec, $fileManager
