--- a/dot_config/gtk-3.0/gtk.css.tmpl
+++ b/dot_config/gtk-3.0/gtk.css.tmpl
@@ -1,42 +1,42 @@
 /* GTK3 color overrides - Generated from theme template */
 
-@define-color window_bg_color #20272c;
-@define-color window_fg_color #bebebe;
-@define-color view_bg_color #20272c;
-@define-color view_fg_color #bebebe;
-@define-color accent_bg_color #303b41;
-@define-color accent_fg_color #20272c;
-@define-color accent_color #303b41;
-@define-color headerbar_bg_color #20272c;
-@define-color headerbar_fg_color #bebebe;
-@define-color headerbar_backdrop_color #20272c;
-@define-color card_bg_color #283137;
-@define-color card_fg_color #bebebe;
-@define-color popover_bg_color #283137;
-@define-color popover_fg_color #bebebe;
-@define-color dialog_bg_color #283137;
-@define-color dialog_fg_color #bebebe;
-@define-color sidebar_bg_color #20272c;
-@define-color sidebar_fg_color #bebebe;
-@define-color sidebar_backdrop_color #20272c;
+@define-color window_bg_color #301832;
+@define-color window_fg_color #f6f3f1;
+@define-color view_bg_color #301832;
+@define-color view_fg_color #f6f3f1;
+@define-color accent_bg_color #f3beab;
+@define-color accent_fg_color #301832;
+@define-color accent_color #f3beab;
+@define-color headerbar_bg_color #301832;
+@define-color headerbar_fg_color #f6f3f1;
+@define-color headerbar_backdrop_color #301832;
+@define-color card_bg_color #3c1e3e;
+@define-color card_fg_color #f6f3f1;
+@define-color popover_bg_color #3c1e3e;
+@define-color popover_fg_color #f6f3f1;
+@define-color dialog_bg_color #3c1e3e;
+@define-color dialog_fg_color #f6f3f1;
+@define-color sidebar_bg_color #301832;
+@define-color sidebar_fg_color #f6f3f1;
+@define-color sidebar_backdrop_color #301832;
 @define-color sidebar_shade_color rgba(0, 0, 0, 0.07);
-@define-color secondary_sidebar_bg_color #20272c;
-@define-color secondary_sidebar_fg_color #bebebe;
-@define-color secondary_sidebar_backdrop_color #20272c;
+@define-color secondary_sidebar_bg_color #301832;
+@define-color secondary_sidebar_fg_color #f6f3f1;
+@define-color secondary_sidebar_backdrop_color #301832;
 @define-color secondary_sidebar_shade_color rgba(0, 0, 0, 0.07);
 
 /* Semantic colors */
-@define-color error_bg_color #e59191;
-@define-color error_fg_color #20272c;
-@define-color error_color #e59191;
+@define-color error_bg_color #e28181;
+@define-color error_fg_color #301832;
+@define-color error_color #e28181;
 @define-color warning_bg_color #dca13b;
-@define-color warning_fg_color #20272c;
+@define-color warning_fg_color #301832;
 @define-color warning_color #dca13b;
 @define-color success_bg_color #3ebb3e;
-@define-color success_fg_color #20272c;
+@define-color success_fg_color #301832;
 @define-color success_color #3ebb3e;
 
 /* Borders and separators */
-@define-color borders #354149;
+@define-color borders #603460;
 @define-color shade_color rgba(0, 0, 0, 0.07);
-@define-color scrollbar_outline_color #354149;
+@define-color scrollbar_outline_color #603460;
