--- a/dot_config/waybar/style.css.tmpl
+++ b/dot_config/waybar/style.css.tmpl
@@ -11,14 +11,14 @@ window#waybar {
 }
 
 tooltip {
-    background: rgba(32, 39, 44, 0.90);
-    color: #bebebe;
+    background: rgba(48, 24, 50, 0.85);
+    color: #f6f3f1;
     border-radius: 12px;
     padding: 8px 14px;
 }
 
 tooltip label {
-    color: #bebebe;
+    color: #f6f3f1;
 }
 
 /* Base pill styling */
@@ -28,15 +28,15 @@ tooltip label {
 #custom-updates,
 #custom-rebuild,
 #custom-notification {
-    background: rgba(32, 39, 44, 0.90);
-    color: #bebebe;
+    background: rgba(48, 24, 50, 0.85);
+    color: #f6f3f1;
     border-radius: 12px;
     padding: 4px 14px;
     margin: 4px 3px;
 }
 
 #custom-updates {
-    color: #61b0d8;
+    color: #51a8d4;
 }
 
 #custom-updates.api-warning {
@@ -54,14 +54,14 @@ tooltip label {
 }
 
 #custom-launcher:hover {
-    background: rgba(42, 52, 58, 0.90);
+    background: rgba(63, 32, 66, 0.85);
 }
 
 /* Group drawers */
 #hardware,
 #controls,
 #status {
-    background: rgba(32, 39, 44, 0.90);
+    background: rgba(48, 24, 50, 0.85);
     border-radius: 12px;
     margin: 4px 3px;
     padding: 0 4px;
@@ -77,7 +77,7 @@ tooltip label {
 #temperature,
 #disk {
     background: transparent;
-    color: #bebebe;
+    color: #f6f3f1;
     padding: 4px 10px;
     margin: 0;
 }
@@ -89,8 +89,8 @@ tooltip label {
 
 #workspaces button {
     padding: 0 8px;
-    background: rgba(36, 44, 49, 0.50);
-    color: #a9a9a9;
+    background: rgba(54, 27, 56, 0.50);
+    color: #e6ddd8;
     border-radius: 8px;
     margin: 6px 2px;
     font-size: 15px;
@@ -98,15 +98,15 @@ tooltip label {
 }
 
 #workspaces button:hover {
-    background: rgba(42, 52, 58, 0.60);
-    color: #bebebe;
+    background: rgba(63, 32, 66, 0.60);
+    color: #f6f3f1;
     box-shadow: none;
     text-shadow: none;
 }
 
 #workspaces button.active {
-    background: rgba(49, 59, 67, 0.80);
-    color: #d7d7d7;
+    background: rgba(73, 37, 76, 0.80);
+    color: #ffffff;
     padding: 0 28px;
 }
 
@@ -114,7 +114,7 @@ tooltip label {
 #temperature.critical,
 #battery.critical:not(.charging):not(.plugged),
 #network.disconnected {
-    color: #e59191;
+    color: #e28181;
 }
 
 #battery.warning:not(.charging):not(.plugged) {
@@ -137,7 +137,7 @@ tooltip label {
 }
 
 #pulseaudio.muted {
-    color: #a9a9a9;
+    color: #e6ddd8;
 }
 
 /* Notification indicator */
