--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,6 +1,6 @@
 [data]
-    email = {{ promptStringOnce . "email" "Your email address" "default@example.com" | quote }}
-    name = {{ promptStringOnce . "name" "Your full name" "John Doe" | quote }}
+    email = {{ promptStringOnce . "email" "Your email address" "86214494+jakeb-grant@users.noreply.github.com" | quote }}
+    name = {{ promptStringOnce . "name" "Your name" "jacob" | quote }}
     hostname = {{ .chezmoi.hostname | quote }}
     graphics = {{ promptChoiceOnce . "graphics" "Graphics driver" (list "amd" "nvidia-prime" "nvidia") "" | quote }}
 
