--- a/dot_config/btop/themes/theme.tmpl
+++ b/dot_config/btop/themes/theme.tmpl
@@ -1,54 +1,54 @@
 # Btop Theme - Generated from active palette
-# Theme: violet-lake
+# Theme: everforest
 
 # Main background, empty for terminal default (transparency support)
 theme[main_bg]=""
 
 # Main text color
-theme[main_fg]="#f6f3f1"
+theme[main_fg]="#bebebe"
 
 # Title color for boxes
-theme[title]="#ffffff"
+theme[title]="#d7d7d7"
 
 # Highlight color for keyboard shortcuts
 theme[hi_fg]="#3fbfbf"
 
 # Background color of selected item in processes box
-theme[selected_bg]="#49254c"
+theme[selected_bg]="#313b43"
 
 # Foreground color of selected item in processes box
-theme[selected_fg]="#ffffff"
+theme[selected_fg]="#d7d7d7"
 
 # Color of inactive/disabled text
-theme[inactive_fg]="#e6ddd8"
+theme[inactive_fg]="#a9a9a9"
 
 # Misc colors for processes box including mini cpu graphs, details memory graph and details status text
-theme[proc_misc]="#51a8d4"
+theme[proc_misc]="#61b0d8"
 
 # Cpu box outline color
-theme[cpu_box]="#603460"
+theme[cpu_box]="#354149"
 
 # Memory/disks box outline color
-theme[mem_box]="#603460"
+theme[mem_box]="#354149"
 
 # Net up/down box outline color
-theme[net_box]="#603460"
+theme[net_box]="#354149"
 
 # Processes box outline color
-theme[proc_box]="#603460"
+theme[proc_box]="#354149"
 
 # Box divider line and small boxes line color
-theme[div_line]="#673569"
+theme[div_line]="#3b4750"
 
 # Temperature graph colors (cool to hot)
 theme[temp_start]="#3fbfbf"
 theme[temp_mid]="#dca13b"
-theme[temp_end]="#e28181"
+theme[temp_end]="#e59191"
 
 # CPU graph colors (low to high usage)
 theme[cpu_start]="#3ebb3e"
 theme[cpu_mid]="#dca13b"
-theme[cpu_end]="#e28181"
+theme[cpu_end]="#e59191"
 
 # Mem/Disk free meter
 theme[free_start]="#3ebb3e"
@@ -56,26 +56,26 @@ theme[free_mid]="#4bb04b"
 theme[free_end]="#74d174"
 
 # Mem/Disk cached meter
-theme[cached_start]="#fbbba3"
-theme[cached_mid]="#ef8862"
-theme[cached_end]="#fef1ec"
+theme[cached_start]="#d47fd4"
+theme[cached_mid]="#cc8acc"
+theme[cached_end]="#e7b8e7"
 
 # Mem/Disk available meter
-theme[available_start]="#938ad7"
-theme[available_mid]="#9b94cf"
-theme[available_end]="#c7c3ea"
+theme[available_start]="#61b0d8"
+theme[available_mid]="#5da4ca"
+theme[available_end]="#9ecee7"
 
 # Mem/Disk used meter
-theme[used_start]="#e28181"
-theme[used_mid]="#d47b7b"
-theme[used_end]="#edb2b2"
+theme[used_start]="#e59191"
+theme[used_mid]="#d98a8a"
+theme[used_end]="#f0c2c2"
 
 # Download graph colors
 theme[download_start]="#3fbfbf"
-theme[download_mid]="#938ad7"
-theme[download_end]="#fbbba3"
+theme[download_mid]="#61b0d8"
+theme[download_end]="#d47fd4"
 
 # Upload graph colors
 theme[upload_start]="#3ebb3e"
 theme[upload_mid]="#dca13b"
-theme[upload_end]="#e28181"
+theme[upload_end]="#e59191"
