--- a/dot_config/walker/themes/theme/style.css.tmpl
+++ b/dot_config/walker/themes/theme/style.css.tmpl
@@ -8,8 +8,8 @@
 }
 
 .box-wrapper {
-  background: #301832;
-  border: 1px solid #603460;
+  background: #20272c;
+  border: 1px solid #354149;
   border-radius: 12px;
   padding: 16px;
   box-shadow:
@@ -23,9 +23,9 @@
 }
 
 .input {
-  background: #361b38;
-  color: #f6f3f1;
-  caret-color: #ffffff;
+  background: #242c31;
+  color: #bebebe;
+  caret-color: #d7d7d7;
   padding: 10px 14px;
   border-radius: 8px;
 }
@@ -35,11 +35,11 @@
 }
 
 .input selection {
-  background: #49254c;
+  background: #313b43;
 }
 
 .input:focus {
-  background: #3f2042;
+  background: #2a343a;
 }
 
 /* Scrollbar */
@@ -49,7 +49,7 @@ scrollbar {
 
 /* Results list */
 .list {
-  color: #f6f3f1;
+  color: #bebebe;
 }
 
 .item-box {
@@ -58,20 +58,20 @@ scrollbar {
 }
 
 child:selected .item-box {
-  background: rgba(73, 37, 76, 0.80);
+  background: rgba(49, 59, 67, 0.80);
 }
 
 child:hover .item-box {
-  background: rgba(63, 32, 66, 0.50);
+  background: rgba(42, 52, 58, 0.50);
 }
 
 .item-subtext {
   font-size: 12px;
-  color: #e6ddd8;
+  color: #a9a9a9;
 }
 
 .item-quick-activation {
-  background: rgba(54, 27, 56, 0.50);
+  background: rgba(36, 44, 49, 0.50);
   border-radius: 6px;
   padding: 8px;
 }
@@ -92,14 +92,14 @@ child:hover .item-box {
 /* Preview panel */
 .preview-box,
 .placeholder {
-  color: #f6f3f1;
+  color: #bebebe;
 }
 
 .preview {
-  background: #361b38;
-  border: 1px solid #603460;
+  background: #242c31;
+  border: 1px solid #354149;
   border-radius: 8px;
-  color: #f6f3f1;
+  color: #bebebe;
 }
 
 .preview .large-icons {
@@ -109,9 +109,9 @@ child:hover .item-box {
 /* Keybinds */
 .keybinds {
   padding-top: 10px;
-  border-top: 1px solid #603460;
+  border-top: 1px solid #354149;
   font-size: 12px;
-  color: #e6ddd8;
+  color: #a9a9a9;
 }
 
 .keybind-button {
@@ -130,7 +130,7 @@ child:hover .item-box {
 .keybind-label {
   padding: 2px 4px;
   border-radius: 4px;
-  border: 1px solid #e6ddd8;
+  border: 1px solid #a9a9a9;
 }
 
 /* Calculator */
@@ -146,15 +146,15 @@ child:hover .item-box {
 /* Error state */
 .error {
   padding: 10px;
-  background: #e28181;
-  color: #301832;
+  background: #e59191;
+  color: #20272c;
   border-radius: 8px;
 }
 
 /* Popover */
 popover {
-  background: #301832;
-  border: 1px solid #603460;
+  background: #20272c;
+  border: 1px solid #354149;
   border-radius: 12px;
   padding: 10px;
 }
