--- a/dot_config/zed/settings.json.tmpl
+++ b/dot_config/zed/settings.json.tmpl
@@ -7,13 +7,21 @@
   },
   "theme": {
     "mode": "dark",
-    "dark": "violet-lake Dark Blur",
-    "light": "violet-lake Dark Blur"
+    "dark": "Everforest Dark Blur",
+    "light": "Everforest Light Blur"
   },
   "icon_theme": {
     "mode": "dark",
     "light": "Material Icon Theme",
     "dark": "Material Icon Theme"
+  },
+  "auto_install_extensions": {
+    "html": true,
+    "material-icon-theme": true,
+    "toml": true,
+    "dockerfile": true,
+    "sql": true,
+    "svelte": true
   },
   "edit_predictions": {
     "mode": "subtle"
