--- a/dot_config/yazi/theme.toml.tmpl
+++ b/dot_config/yazi/theme.toml.tmpl
@@ -1,114 +1,114 @@
 # Yazi Theme - Generated from theme template
 
 [mgr]
-cwd = { fg = "#ffffff" }
-hovered = { bg = "#49254c" }
-preview_hovered = { bg = "#3f2042" }
+cwd = { fg = "#d7d7d7" }
+hovered = { bg = "#313b43" }
+preview_hovered = { bg = "#2a343a" }
 find_keyword = { fg = "#dca13b", bold = true }
-find_position = { fg = "#fbbba3", italic = true }
+find_position = { fg = "#d47fd4", italic = true }
 marker_copied = { fg = "#3ebb3e", bg = "#3ebb3e" }
-marker_cut = { fg = "#e28181", bg = "#e28181" }
+marker_cut = { fg = "#e59191", bg = "#e59191" }
 marker_marked = { fg = "#3fbfbf", bg = "#3fbfbf" }
 marker_selected = { fg = "#dca13b", bg = "#dca13b" }
-count_copied = { fg = "#301832", bg = "#3ebb3e" }
-count_cut = { fg = "#301832", bg = "#e28181" }
-count_selected = { fg = "#301832", bg = "#dca13b" }
-border_style = { fg = "#603460" }
+count_copied = { fg = "#20272c", bg = "#3ebb3e" }
+count_cut = { fg = "#20272c", bg = "#e59191" }
+count_selected = { fg = "#20272c", bg = "#dca13b" }
+border_style = { fg = "#354149" }
 
 [tabs]
-active = { fg = "#ffffff", bg = "#49254c" }
-inactive = { fg = "#e6ddd8", bg = "#361b38" }
+active = { fg = "#d7d7d7", bg = "#313b43" }
+inactive = { fg = "#a9a9a9", bg = "#242c31" }
 
 [mode]
-normal_main = { fg = "#301832", bg = "#938ad7", bold = true }
-normal_alt = { fg = "#938ad7", bg = "#361b38" }
-select_main = { fg = "#301832", bg = "#3ebb3e", bold = true }
-select_alt = { fg = "#3ebb3e", bg = "#361b38" }
-unset_main = { fg = "#301832", bg = "#fbbba3", bold = true }
-unset_alt = { fg = "#fbbba3", bg = "#361b38" }
+normal_main = { fg = "#20272c", bg = "#61b0d8", bold = true }
+normal_alt = { fg = "#61b0d8", bg = "#242c31" }
+select_main = { fg = "#20272c", bg = "#3ebb3e", bold = true }
+select_alt = { fg = "#3ebb3e", bg = "#242c31" }
+unset_main = { fg = "#20272c", bg = "#d47fd4", bold = true }
+unset_alt = { fg = "#d47fd4", bg = "#242c31" }
 
 [status]
 sep_left = { open = "", close = "" }
 sep_right = { open = "", close = "" }
-overall = { fg = "#f6f3f1", bg = "#361b38" }
+overall = { fg = "#bebebe", bg = "#242c31" }
 perm_read = { fg = "#3ebb3e" }
 perm_write = { fg = "#dca13b" }
-perm_exec = { fg = "#e28181" }
-perm_sep = { fg = "#e6ddd8" }
+perm_exec = { fg = "#e59191" }
+perm_sep = { fg = "#a9a9a9" }
 
 [pick]
-border = { fg = "#603460" }
-active = { fg = "#ffffff" }
-inactive = { fg = "#e6ddd8" }
+border = { fg = "#354149" }
+active = { fg = "#d7d7d7" }
+inactive = { fg = "#a9a9a9" }
 
 [input]
-border = { fg = "#603460" }
-title = { fg = "#ffffff" }
-value = { fg = "#f6f3f1" }
-selected = { bg = "#49254c" }
+border = { fg = "#354149" }
+title = { fg = "#d7d7d7" }
+value = { fg = "#bebebe" }
+selected = { bg = "#313b43" }
 
 [confirm]
-border = { fg = "#603460" }
-title = { fg = "#ffffff", bold = true }
-content = { fg = "#f6f3f1" }
-list = { fg = "#f6f3f1" }
-btn_yes = { bg = "#3ebb3e", fg = "#301832" }
-btn_no = { bg = "#e28181", fg = "#301832" }
+border = { fg = "#354149" }
+title = { fg = "#d7d7d7", bold = true }
+content = { fg = "#bebebe" }
+list = { fg = "#bebebe" }
+btn_yes = { bg = "#3ebb3e", fg = "#20272c" }
+btn_no = { bg = "#e59191", fg = "#20272c" }
 btn_labels = ["Yes", "No"]
 
 [cmp]
-border = { fg = "#603460" }
-active = { fg = "#ffffff", bg = "#49254c" }
-inactive = { fg = "#e6ddd8" }
+border = { fg = "#354149" }
+active = { fg = "#d7d7d7", bg = "#313b43" }
+inactive = { fg = "#a9a9a9" }
 icon_file = ""
 icon_folder = ""
 icon_command = ""
 
 [tasks]
-border = { fg = "#603460" }
-title = { fg = "#ffffff" }
-hovered = { bg = "#49254c" }
+border = { fg = "#354149" }
+title = { fg = "#d7d7d7" }
+hovered = { bg = "#313b43" }
 
 [which]
 cols = 3
-mask = { bg = "#301832" }
+mask = { bg = "#20272c" }
 cand = { fg = "#3fbfbf" }
-rest = { fg = "#e6ddd8" }
-desc = { fg = "#f6f3f1" }
+rest = { fg = "#a9a9a9" }
+desc = { fg = "#bebebe" }
 separator = "  "
-separator_style = { fg = "#603460" }
+separator_style = { fg = "#354149" }
 
 [help]
 on = { fg = "#3fbfbf" }
-run = { fg = "#f6f3f1" }
-desc = { fg = "#e6ddd8" }
-hovered = { bg = "#49254c" }
-footer = { fg = "#e6ddd8", bg = "#361b38" }
+run = { fg = "#bebebe" }
+desc = { fg = "#a9a9a9" }
+hovered = { bg = "#313b43" }
+footer = { fg = "#a9a9a9", bg = "#242c31" }
 
 [notify]
-title_info = { fg = "#51a8d4" }
+title_info = { fg = "#61b0d8" }
 title_warn = { fg = "#dca13b" }
-title_error = { fg = "#e28181" }
+title_error = { fg = "#e59191" }
 
 [filetype]
 rules = [
     # Directories
-    { name = "*/", fg = "#938ad7", bold = true },
+    { name = "*/", fg = "#61b0d8", bold = true },
 
     # Executables
     { mime = "application/x-executable", fg = "#3ebb3e" },
     { mime = "application/x-sharedlib", fg = "#3ebb3e" },
 
     # Archives
-    { mime = "application/*zip*", fg = "#fbbba3" },
-    { mime = "application/x-tar", fg = "#fbbba3" },
-    { mime = "application/x-*compressed*", fg = "#fbbba3" },
-    { mime = "application/x-rar", fg = "#fbbba3" },
-    { mime = "application/x-7z*", fg = "#fbbba3" },
+    { mime = "application/*zip*", fg = "#d47fd4" },
+    { mime = "application/x-tar", fg = "#d47fd4" },
+    { mime = "application/x-*compressed*", fg = "#d47fd4" },
+    { mime = "application/x-rar", fg = "#d47fd4" },
+    { mime = "application/x-7z*", fg = "#d47fd4" },
 
     # Documents
-    { mime = "application/pdf", fg = "#e28181" },
-    { mime = "application/*doc*", fg = "#938ad7" },
+    { mime = "application/pdf", fg = "#e59191" },
+    { mime = "application/*doc*", fg = "#61b0d8" },
     { mime = "application/*sheet*", fg = "#3ebb3e" },
     { mime = "application/*presentation*", fg = "#dca13b" },
 
@@ -116,13 +116,13 @@ rules = [
     { mime = "image/*", fg = "#3fbfbf" },
 
     # Video
-    { mime = "video/*", fg = "#fbbba3" },
+    { mime = "video/*", fg = "#d47fd4" },
 
     # Audio
     { mime = "audio/*", fg = "#dca13b" },
 
     # Text/Code
-    { mime = "text/*", fg = "#f6f3f1" },
+    { mime = "text/*", fg = "#bebebe" },
     { mime = "application/json", fg = "#dca13b" },
     { mime = "application/javascript", fg = "#dca13b" },
     { mime = "application/x-yaml", fg = "#3fbfbf" },
@@ -131,5 +131,5 @@ rules = [
     { name = "*", is = "link", fg = "#3fbfbf", italic = true },
 
     # Orphan links
-    { name = "*", is = "orphan", fg = "#e28181", italic = true },
+    { name = "*", is = "orphan", fg = "#e59191", italic = true },
 ]
