Add EDITOR/VISUAL env vars, link to arch-quickstart
- Add EDITOR and VISUAL environment variables (zeditor)
- Add screenshot placeholder in README
- Reference arch-quickstart for dependencies

--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -17,6 +17,8 @@ $mod = SUPER
 # ------------------------------------------------------------------------------
 # Environment Variables
 # ------------------------------------------------------------------------------
+env = EDITOR,zeditor --wait
+env = VISUAL,zeditor --wait
 env = GSK_RENDERER,gl
 env = GDK_BACKEND,wayland,x11
 env = XCURSOR_THEME,Bibata-Modern-Classic
